--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> This is my first web page powered by GitHu Pates </h1>
+<h1> This is my first web page powered by GitHub </h1>
 Thanks GitHub!
 </html>
